name:                effin
version:             0.2.0.0
synopsis:            A Typeable-free implementation of extensible effects
homepage:            https://github.com/YellPika/effin
license:             BSD3
license-file:        LICENSE
author:              Anthony Vandikas
maintainer:          yellpika@gmail.com
copyright:           (c) 2014 Anthony Vandikas
category:            Control, Effect
build-type:          Simple
cabal-version:       >=1.10
-- description:

library
  -- exposed-modules:
  other-modules:
    Data.Type.List,
    Data.Union

  build-depends: base >= 4.7 && < 4.8

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

source-repository head
  type:     git
  location: git://github.com/YellPika/effin.git
