name:                effin
version:             0.2.0.0
synopsis:            A Typeable-free implementation of extensible effects
homepage:            https://github.com/YellPika/effin
license:             BSD3
license-file:        LICENSE
author:              Anthony Vandikas
maintainer:          yellpika@gmail.com
copyright:           (c) 2014 Anthony Vandikas
category:            Control, Effect
build-type:          Simple
cabal-version:       >=1.10
-- description:

flag mtl
  description: Enable MTL support
  default: True
  manual: True

library
  exposed-modules:
    Control.Effect.Bracket,
    Control.Effect.Coroutine,
    Control.Effect.Exception,
    Control.Effect.Reader,
    Control.Effect.Lift,
    Control.Effect.List,
    Control.Effect.State,
    Control.Effect.Witness,
    Control.Effect.Writer,
    Control.Monad.Effect

  other-modules:
    Data.Index,
    Data.Type.Row,
    Data.Type.Nat
    Data.Union

  build-depends: base >= 4.7 && < 4.8
  if flag(mtl)
    build-depends: mtl >= 2.1 && < 3

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

  if flag(mtl)
    cpp-options: -DMTL

source-repository head
  type:     git
  location: git://github.com/YellPika/effin.git
